# playground_old

./: .gitignore  Dockerfile  README.md  build.gradle  settings.gradle
certs/: certificate.pem  csr.csr  key.pem
data-core-sql/: pom.xml
data-core-sql/src/main/resources/: application.yml
docker-env/: README.md  docker-compose-nosql.yml  docker-compose-sql.yml
docker-env/configuration/nosql/mongo/: mongo-init.js
docker-env/configuration/sql/mysql-config/: mysql_db_config.sql
docker-env/configuration/sql/postgres-config/: postgres_db_config.sql
erlang/: README.md
erlang/networking/: Makefile  cheat_sheet.sh  rebar.config  service.config
erlang/networking/.lh/: erlang_ls.config.json
erlang/networking/apps/http-server-app/: README.md
erlang/networking/config/: sys.config
erlang/networking/resources/: message.avsc
erlang/tcp-demo/: Makefile  rebar.config
files/: test.txt  test_2.txt
go/: README.md
go/src/balistic-engine/: Dockerfile  gRPC.proto  go.mod  go.sum
go/src/balistic-engine/grpc/: model.proto
go/src/balistic-engine/model/: entities.go
go/src/balistic-engine/resources/: artillery.pb.go  artillery_grpc.pb.go
go/src/balistic-engine/rest/: grpc-config.rest
go/src/balistic-engine/test/: airspace_monitor_test.go  artilery_test.go  artillery_test.go  balistic_test.go  config.go  integration_test.go  mesasge_srv_test.go  missle_test.go  radar_test.go  space_test.go  system_test.go
go/src/jwt-authentication-golang/: docker-compose.yml  go.mod  go.sum  main.go
go/src/jwt-authentication-golang/rest/: secured.rest  token.rest
go/src/ninja-srv/: boot.yaml  buf.gen.yaml  go.mod  go.sum
go/src/tonic-srv/: go.mod
gradle/wrapper/: gradle-wrapper.properties
infrastructure/: pom.xml
java/: README.md
java/infrastructure/: pom.xml
rust/: README.md
rust/command_service/: Cargo.toml
rust/command_service/src/: asynchronous_processing.rs  main.rs  metadata.rs
rust/cqrs/: Cargo.toml  Dockerfile-cqrs
rust/cqrs/.lh/rest_api_actix/: Cargo.toml.json
rust/cqrs/_docker/: compose_exec.sh
rust/cqrs/_workbench/: hey_http_100_000_messages.sh  post_message.lua  wrk_100_000_logged_in_messages.sh
rust/cqrs/auth_model/: Cargo.toml
rust/cqrs/auth_model/src/: lib.rs
rust/cqrs/auth_service/: Cargo.toml
rust/cqrs/auth_service/src/: auth_service.rs  lib.rs
rust/cqrs/command_service/: Cargo.toml
rust/cqrs/command_service/src/: errors.rs  lib.rs  metadata.rs  send_message_service.rs
rust/cqrs/commons_lib/: Cargo.toml
rust/cqrs/commons_lib/src/: cqrs_entity_errors.rs  lib.rs
rust/cqrs/domain_model/: Cargo.toml
rust/cqrs/domain_model/src/: message.rs
rust/cqrs/mapper/: Cargo.toml
rust/cqrs/mapper/src/: lib.rs  tokyo_async_test.rs  unit_tests_attachments.rs  unit_tests_from_string_to_binary.rs
rust/cqrs/mapper/test/: message.json
rust/cqrs/rest_api_actix/: Cargo.toml
rust/cqrs/rest_api_actix/src/: authorization.rs  controllers.rs  http_server.rs  https_server.rs  lib.rs  task_executor.rs
rust/cqrs/rest_api_hyper/: Cargo.toml
rust/cqrs/rest_api_warp/: Cargo.toml
rust/cqrs/service_lib/: Cargo.toml
rust/cqrs/service_main/: Cargo.toml
rust/cqrs/service_main/src/: main.rs
rust/cqrs_micro/: Cargo.toml  docker-compose.yml
rust/cqrs_micro/.lh/auth_model/: Cargo.toml.json
rust/cqrs_micro/.lh/auth_service/: Cargo.toml.json
rust/cqrs_micro/.lh/commons_lib/: Cargo.toml.json
rust/cqrs_micro/.lh/domain_model/: Cargo.toml.json
rust/cqrs_micro/.lh/mapper/: Cargo.toml.json
rust/cqrs_micro/.lh/rest_api_actix/: Cargo.toml.json
rust/cqrs_micro/.lh/rest_api_hyper/: Cargo.toml.json
rust/cqrs_micro/.lh/rest_api_warp/: Cargo.toml.json
rust/cqrs_micro/.lh/service_lib/: Cargo.toml.json
rust/cqrs_micro/.lh/service_main/: Cargo.toml.json
rust/cqrs_micro/_docker/: Dockerfile-cqrs  Dockerfile-librdkafka  build_image.sh  docker-compose.yml
rust/cqrs_micro/_workbench/: hey_https_100_000_messages.sh  login_post_message.lua  wrk_100_000_messages.sh
rust/cqrs_micro/auth_model/: Cargo.toml
rust/cqrs_micro/auth_model/src/: auth_model.rs  user_repository.rs
rust/cqrs_micro/auth_service/: Cargo.toml
rust/cqrs_micro/auth_service/src/: auth_errors.rs  auth_service.rs
rust/cqrs_micro/commons_lib/: Cargo.toml
rust/cqrs_micro/commons_lib/src/: lib.rs
rust/cqrs_micro/domain_model/: Cargo.toml
rust/cqrs_micro/domain_model/src/: lib.rs
rust/cqrs_micro/mapper/: Cargo.toml
rust/cqrs_micro/mapper/src/: errors.rs  mapper.rs  unit_tests_message.rs
rust/cqrs_micro/rest_api_actix/: Cargo.toml
rust/cqrs_micro/rest_api_actix/src/: http_server.rs  https_server.rs  lib.rs  protected_api.rs  public_api.rs
rust/cqrs_micro/rest_api_hyper/: Cargo.toml
rust/cqrs_micro/rest_api_warp/: Cargo.toml
rust/cqrs_micro/service_lib/: Cargo.toml
rust/cqrs_micro/service_main/: Cargo.toml
rust/cqrs_micro/service_main/src/: main.rs
rust/matkat-web/.lh/: Cargo.toml.json
rust/matkat-web/.lh/common-libs/: Cargo.toml.json
rust/matkat-web/.lh/common-utils/: Cargo.toml.json
rust/matkat-web/.lh/common_libs/: Cargo.toml.json
rust/matkat-web/.lh/executor/: Cargo.toml.json
rust/matkat-web/.lh/http-srv/: Cargo.toml.json
rust/matkat-web/.lh/mk-scraper/: Cargo.toml.json
rust/matkat-web/.lh/mk_scraper/: Cargo.toml.json
rust/matkat-web/.lh/scraper/: Cargo.toml.json  const.rs.json
rust/matkat-web/.lh/starter/: Cargo.toml.json
rust/matkat-web/common-utils/: Cargo.toml
rust/matkat-web/common_libs/: Cargo.toml
rust/matkat-web/common_libs/src/: files.rs
rust/matkat-web/executor/: Cargo.toml
rust/matkat-web/executor/src/: lib.rs  model.rs
rust/matkat-web/http-srv/: Cargo.toml
rust/matkat-web/http-srv/src/: scrape_controller.rs
rust/matkat-web/mk-scraper/: Cargo.toml
rust/matkat-web/mk-scraper/src/: task_executor.rs
rust/matkat-web/starter/: Cargo.toml
rust/playground/: Cargo.toml
rust/playground/.lh/: Cargo.toml.json
rust/playground/.lh/src/: lib.rs.json
rust/playground/config/logs/: log4rs.yml
rust/playground/src/: lib.rs  main.rs  model.rs
src/: README.md
src/main/resources/: application.yml
(+196 files in other folders)
