[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
crossbeam = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
log4rs = "1.0.0"
