[package]
name = "command_service"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { features = ["max_level_info", "release_max_level_warn"] }
log4rs = { }
inner = {}
lazy_static = {}
serde = { features = ["derive"] }
serde_json = {}
uuid = {}



rdkafka = "0.26.0"
clap = "2.33.3"
