[package]
name = "commons_lib"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
futures = "0.3.12"
bcrypt = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
inner = "0.1.1"
lazy_static = "1.4.0"
serial_test = "0.5.1"
envfile = "0.2.1"
rust-crypto = "0.2.36"
avro-rs = "0.13.0"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["max_level_info", "release_max_level_warn"] }
log4rs = "1.0.0"



