[package]
name = "domain_model"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {features = ["derive"] }
serde_json = {}
chrono = { features = ["serde"] }
uuid = { features = ["serde", "v4"] }

