[package]
name = "auth_model"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons_lib={path = "../commons_lib"}
rust-crypto = {version = "*"}
serde = {version = "*",features = ["derive"] }
inner = {version = "*"}
serde_json = {version = "*"}
lazy_static = { version = "*"}
chrono = { version = "*",features = ["serde"] }
serial_test = { version = "*"}
uuid = { version = "*",features = ["serde", "v4"] }
bcrypt = { version = "*"}