[package]
name = "auth_service"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons_lib = {path = "../commons_lib" }
auth_model = {path = "../auth_model" }
serial_test = {version = "*"}
inner = {version = "*"}
serde = { version = "*",features = ["derive"] }
serde_json = {version = "*" }
rust-crypto = { version = "*"}
chrono = {version = "*",features = ["serde"] }
jsonwebtoken = {version = "*" }
lazy_static = { version = "*"}