[package]
name = "domain_model"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {fversion = "*",eatures = ["derive"] }
serde_json = {version = "*"}
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["serde", "v4"] }

