[package]
name = "service_lib"
version = "0.1.0"
authors = ["Ayagasha <alexander.todorov@ayagasha.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {features = ["derive"] }
inner = {version = "*"}
serde_json = {version = "*"}